# dora-soarm

./: README.md
so100_dora/so100_dora_mujoco/: test_mujoco_read-graph.html  test_mujoco_write-graph.html
so100_dora/so100_dora_mujoco/configs/: so100_config.json
so100_dora/so100_dora_mujoco/graphs/: MJDATA.TXT  test_mujoco_read.yml  test_mujoco_read1.yml  test_mujoco_write.yml  test_mujoco_write1.yml  test_planning.yml
so100_dora/so100_dora_mujoco/models/: scene_with_table.xml  so_arm100_scene_combined.xml
so100_dora/so100_dora_mujoco/models/urdf/: SO_5DOF_ARM100_8j_URDF.SLDASM.urdf
so100_dora/so100_dora_mujoco/nodes/manual_commander/: main.py  pyproject.toml
so100_dora/so100_dora_mujoco/nodes/simple_text_commander/: pyproject.toml
so100_dora/so100_dora_mujoco/nodes/simple_text_commander/simple_text_commander/: main.py
so100_dora/so100_dora_mujoco/nodes/so100_mujoco_client/: main.py  main1.py  main2.py  pyproject.toml
so100_dora/so100_dora_mujoco/nodes/so100_planner/: pyproject.toml
so100_dora/so100_dora_mujoco/nodes/so100_planner/so100_planner/: main.py
